--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 
 <body>
     Hello world!
-    Welcome to my website
+    <h1 style="color:blue;">Welcome to my website<h1>
     <h2> hello </h2>
 </body>
 
